# gitlab-bot

./: Cargo.toml  README.md
docker/: Dockerfile  build.sh
src/: bot.rs  main.rs
src/client/: mod.rs  types.rs
src/reports/: mod.rs  phpunit.rs
