[package]
name = "gitlab-bot"
version = "0.0.1"
authors = ["Christoph Herzog <chris@theduke.at>"]

[dependencies]
reqwest = { version = "0.8.5", features = ["unstable"] }
tokio-core = "0.1.12"
serde = "1.0.27"
serde_json = "1.0.9"
serde_derive = "1.0.27"
sloggers = "0.2.6"
futures = "0.1.18"
failure = "0.1.1"
chrono = { version = "0.4.0", features = ["serde"] }
futures-await = "0.1.0"
toml = "0.4.5"
regex = "0.2.6"
slog = { version = "2.1.1", features = ["max_level_trace"] }
openssl-sys = "0.9.26"
openssl-probe = "0.1.2"
xmltree = "0.8.0"
